[bdist_wheel]
universal=1

[metadata]
name = air2neo
version = attr: air2neo.__version__

description = Airtable to Neo4j Data Ingestor written in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = David Lee
url = https://github.com/bilbyai/air2neo
authoremail = leetdavidu@gmail.com
license = BSD 3-Clause License
copyright = Copyright 2022 David Lee
keywords = airtable, neo4j, pyairtable, job, data, ingestor, air2neo, pipeline
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    pyairtable >= 3.0.2
    neo4j >= 5.28.1
    pandas >= 2.2.3
    pyarrow >= 19.0.1
[aliases]
test=pytest

[mypy]
mypy_path = air2neo
python_version = 3.8
warn_return_any = False
warn_unused_configs = False
